hard-gists/2152643/run.log
=== Docker Run Log for 2152643 ===
Started at: Mi 29. Okt 13:00:10 CET 2025

[2025-10-29 13:00:10] START: Running container for 2152643
[2025-10-29 13:00:11] SUCCESS: Container b02ff71cdc659fb2c3567a5f998541c0a7029a8dd919d21673a3de292cdfa096 started for 2152643
=== Container logs for 2152643 ===
  File "/snippet.py", line 48
    print "input latency: {0}".format(stream.get_input_latency())
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2152643 ===
[2025-10-29 13:00:13] INFO: Container b02ff71cdc659fb2c3567a5f998541c0a7029a8dd919d21673a3de292cdfa096 has stopped
